plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
	id "io.qameta.allure" version "2.11.2"
}

group = 'automation-framework-example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	compileOnly 'org.projectlombok:lombok'
//	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter'

	testImplementation 'org.assertj:assertj-core:3.24.2'
	implementation 'org.apache.logging.log4j:log4j:2.8.2'
	implementation 'org.awaitility:awaitility:3.0.0'
	implementation 'org.testng:testng:6.14.3'
}

test {
	jvmArgs(['--enable-preview'])
	useTestNG(){

	}
}
